# Stemlight

./: .gitignore  Dispenser_Distribution_Matrix.py  LICENSE  Main_Menu.py  README.md  Stemlight_Linux.spec  bench.txt  build.bat  build.sh  fungi_weighted_heatmap.xlsx  optimal_placements.txt  pyproject.toml  requirements.txt
Archive/: Dispenser_Distribution_Matrix.py  Dispenser_Placement_Optimiser.py  Main_Menu (subprocess).py  NTFLC_README.md  Nylium_Dispenser_Placement_Calculator (terminal input).py
Assets/: Credits.py  calculate_layout.py  colours.py  constants.py  full_vrm0_layout.litematic  vrm_optimisation_heatmap.py
Calculators/: NDPC_GUI.py  Nether_Tree_Farm_Layout_Efficiency_Calculator.py  Nether_Tree_Farm_Rates_Calculator.py  Nylium_Dispenser_Placement_Calculator.py  Trunk_Distribution_Calculator.py  calculators.txt
Charts/: Chart_Display.py
Simulators/: simulators.txt
assets/: heatmap_data.py
layouts/: 1w.yaml  crimson_test.yaml  just 144 dispensers, nothing to see here move along now.yaml  this benefits from a cleared dispenser.yaml  wantfa fantfa (first time transferring a ntf layout over the air, wdls and schems dont exist wdym).yaml
src/: Chart_Display.py  Credits.py  Custom_Nylium_Grid_Heatmap_Calculator.py  Dispenser_Distribution_Matrix.py  Dispenser_Layouts_Visualiser.py  Dispenser_Placement_Optimiser.py  Fast_Dispenser_Distribution.py  Fungus_Distribution_Backend.py  Fungus_Distribution_Heatmap_Calculator_Frontend.py  Fungus_Growth_Attempts_Sim.py  NDPC_GUI.py  Nether_Tree_Farm_Layout_Efficiency_Calculator.py  Stochastic_Optimisation.py  (+13 more)
(+27 files in other folders)
