[tool.poetry]
name = "Stemlight"
version = "1.1.12-beta"
description = "Nether Tree Farming GUI Tool"
authors = ["ncolyer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.1.3"
litemapy = "^0.10.0b0"
pillow = "^11.0.0"
pyinstaller = "^6.11.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
PyYAML = "^6.0.2"
matplotlib = "^3.9.2"
questionary = "^2.0.1"
openpyxl = "^3.1.5"
XlsxWriter = "^3.2.0"
psutil = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
